--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@ db:
     username: "postgres"
     host: "localhost"
     port: "5432"
-    dbname: "postgres"
+    name: "postgres"
     sslmode: "disable"
     dialect: "postgres"
 
